# Sleepvoice

./: README.md  global.d.ts  package-lock.json  package.json  tsconfig.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
